--- a/style.css
+++ b/style.css
@@ -12,5 +12,80 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background: #5bec2f;
+  background: #00ff59;
+}
+
+.container {
+  width: 480px;
+  height: 630px;
+  background: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 10px;
+  box-shadow: 0 5px 30px 10px rgb(0 0 0 / 0.4);
+}
+
+/* Form */
+form {
+  width: 90%;
+}
+
+.form-group {
+  height: 65px;
+}
+
+label {
+  position: relative;
+  bottom: 3px;
+}
+
+input {
+  width: 100%;
+  height: 34px;
+  padding: 5px;
+  border: solid 1px black;
+  border-radius: 5px;
+  outline: none;
+  transition: all 0.3s;
+}
+
+input:valid {
+  border: solid 1px green;
+}
+
+input:invalid {
+  border: solid 1px rgb(0, 241, 229);
+}
+
+button {
+  cursor: pointer;
+  color: white;
+  background: black;
+  border: none;
+  border-radius: 5px;
+  height: 50px;
+  width: 100%;
+  font-size: 20px;
+  letter-spacing: 2px;
+  margin-top: 5px;
+}
+
+button:hover {
+  filter: brightness(200%);
+  background: rgb(22, 22, 22);
+}
+
+button:focus {
+  outline: none;
+}
+
+.message-container {
+  border: solid 1px black;
+  border-radius: 5px;
+  width: 90%;
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  color: black;
 }
